--- a/day_11/day11_assignment.ipynb
+++ b/day_11/day11_assignment.ipynb
@@ -218,7 +218,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "7. Quadratic equation is calculated as follows: ax² + bx + c = 0. Write a function which calculates solution set of a quadratic equation, solve_quadratic_eqn."
+   ]
   },
   {
    "cell_type": "code",
@@ -251,6 +253,299 @@
     "result_roots = solve_quadratic_eqn(a, b, c)\n",
     "print(f\"The roots of the quadratic equation are: {result_roots}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Declare a function named print_list. It takes a list as a parameter and it prints out each element of the list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of the list:\n",
+      "1\n",
+      "3\n",
+      "four\n",
+      "52.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_list(my_list):\n",
+    "    # iterate through the list\n",
+    "    for item in my_list:\n",
+    "        print(item)\n",
+    "\n",
+    "# Example usage:\n",
+    "my_list = [1, 3, 'four', 52.0]\n",
+    "\n",
+    "print(\"Elements of the list:\")\n",
+    "print_list(my_list)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Declare a function named reverse_list. It takes an array as a parameter and it returns the reverse of the array (use loops).  \n",
+    "print(reverse_list([1, 2, 3, 4, 5]))  \n",
+    ".# [5, 4, 3, 2, 1]  \n",
+    "print(reverse_list1([\"A\", \"B\", \"C\"]))  \n",
+    ".# [\"C\", \"B\", \"A\"]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "['C', 'B', 'A']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_list(my_list):\n",
+    "    \n",
+    "    #iterate and append the list\n",
+    "    reversed_list = []\n",
+    "    for i in range(len(my_list) - 1, -1, -1):\n",
+    "        reversed_list.append(my_list[i])\n",
+    "    return reversed_list\n",
+    "\n",
+    "# Example\n",
+    "print(reverse_list([1, 2, 3, 4, 5]))\n",
+    "\n",
+    "print(reverse_list([\"A\", \"B\", \"C\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Declare a function named capitalize_list_items. It takes a list as a parameter and it returns a capitalized list of items\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original List: ['apple', 'banana', 'cherry']\n",
+      "Capitalized List: ['Apple', 'Banana', 'Cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def capitalize_list_items(my_list):\n",
+    "    \n",
+    "    #iterate and capitalize\n",
+    "    capitalized_list = [item.capitalize() for item in my_list]\n",
+    "    return capitalized_list\n",
+    "\n",
+    "# Example usage:\n",
+    "original_list = [\"apple\", \"banana\", \"cherry\"]\n",
+    "\n",
+    "capitalized_result = capitalize_list_items(original_list)\n",
+    "print(\"Original List:\", original_list)\n",
+    "print(\"Capitalized List:\", capitalized_result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11. Declare a function named add_item. It takes a list and an item parameters. It returns a list with the item added at the end.  \n",
+    "food_staff = ['Potato', 'Tomato', 'Mango', 'Milk'];  \n",
+    "print(add_item(food_staff, 'Meat'))     # ['Potato', 'Tomato', 'Mango', 'Milk','Meat'];  \n",
+    "numbers = [2, 3, 7, 9];  \n",
+    "print(add_item(numbers, 5))      [2, 3, 7, 9, 5]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Potato', 'Tomato', 'Mango', 'Milk', 'Meat']\n",
+      "[2, 3, 7, 9, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_item(my_list, new_item):\n",
+    "    \n",
+    "    updated_list = my_list + [new_item]\n",
+    "    return updated_list\n",
+    "\n",
+    "# Example\n",
+    "food_staff = ['Potato', 'Tomato', 'Mango', 'Milk']\n",
+    "result_food_staff = add_item(food_staff, 'Meat')\n",
+    "print(result_food_staff)\n",
+    "\n",
+    "numbers = [2, 3, 7, 9]\n",
+    "result_numbers = add_item(numbers, 5)\n",
+    "print(result_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12. Declare a function named remove_item. It takes a list and an item parameters. It returns a list with the item removed from it.  \n",
+    "food_staff = ['Potato', 'Tomato', 'Mango', 'Milk'];  \n",
+    "print(remove_item(food_staff, 'Mango'))  # ['Potato', 'Tomato', 'Milk'];  \n",
+    "numbers = [2, 3, 7, 9];  \n",
+    "print(remove_item(numbers, 3))  # [2, 7, 9  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Potato', 'Tomato', 'Milk']\n",
+      "[2, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_item(my_list, item_to_remove):\n",
+    "    \n",
+    "    updated_list = [item for item in my_list if item != item_to_remove]\n",
+    "    return updated_list\n",
+    "\n",
+    "# Example usage:\n",
+    "food_stuff = ['Potato', 'Tomato', 'Mango', 'Milk']\n",
+    "result_food_stuff = remove_item(food_stuff, 'Mango')\n",
+    "print(result_food_stuff)\n",
+    "\n",
+    "numbers = [2, 3, 7, 9]\n",
+    "result_numbers = remove_item(numbers, 3)\n",
+    "print(result_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13. Declare a function named sum_of_numbers. It takes a number parameter and it adds all the numbers in that range.  \n",
+    "print(sum_of_numbers(5))  # 15  \n",
+    "print(sum_all_numbers(10)) # 55  \n",
+    "print(sum_all_numbers(100)) # 5050  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_numbers(n):\n",
+    "   \n",
+    "    return sum(range(1, n + 1))\n",
+    "\n",
+    "# Example usage:\n",
+    "print(sum_of_numbers(5))\n",
+    "print(sum_of_numbers(10))\n",
+    "print(sum_of_numbers(100))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14. Declare a function named sum_of_odds. It takes a number parameter and it adds all the odd numbers in that range.  \n",
+    "    \n",
+    "15. Declare a function named sum_of_even. It takes a number parameter and it adds all the even numbers in that - range.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of odds in the range: 9\n",
+      "Sum of evens in the range: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_odds(number):\n",
+    "    # generate odd numbers in the range\n",
+    "    odd_numbers = (n for n in range(number + 1) if n % 2 == 1)\n",
+    "    return sum(odd_numbers)\n",
+    "\n",
+    "def sum_of_even(number):\n",
+    "    #generate even numbers in the range\n",
+    "    even_numbers = (n for n in range(number + 1) if n % 2 == 0)\n",
+    "    return sum(even_numbers)\n",
+    "\n",
+    "# Example\n",
+    "number_input = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "result_sum_of_odds = sum_of_odds(number_input)\n",
+    "result_sum_of_even = sum_of_even(number_input)\n",
+    "\n",
+    "print(f\"Sum of odds in the range: {result_sum_of_odds}\")\n",
+    "print(f\"Sum of evens in the range: {result_sum_of_even}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises: Level 2\n",
+    "\n",
+    "1. Declare a function named evens_and_odds . It takes a positive integer as parameter and it counts number of evens and odds in the number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
