--- a/day_11/day11_assignment.ipynb
+++ b/day_11/day11_assignment.ipynb
@@ -542,6 +542,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evens_and_odds(number):\n",
+    "    # Ensure the input is a positive integer\n",
+    "    if not isinstance(number, int) or number <= 0:\n",
+    "        return \"Please provide a positive integer.\"\n",
+    "\n",
+    "    # Convert the number to a string to iterate through its digits\n",
+    "    number_str = str(number)\n",
+    "\n",
+    "    # Count the number of even and odd digits\n",
+    "    count_even = sum(1 for digit in number_str if int(digit) % 2 == 0)\n",
+    "    count_odd = sum(1 for digit in number_str if int(digit) % 2 != 0)\n",
+    "\n",
+    "    # Print the results\n",
+    "    result = f\"The number of odds are {count_odd}.\\nThe number of evens are {count_even}.\"\n",
+    "    return result\n",
+    "\n",
+    "# Example usage:\n",
+    "number_input = int(input(\"Enter a positive integer: \"))\n",
+    "result = evens_and_odds(number_input)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call your function factorial, it takes a whole number as a parameter and it return a factorial of the number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 6 is 720.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(number):\n",
+    "\n",
+    "    # Calculate the factorial\n",
+    "    result = 1\n",
+    "    for i in range(1, number + 1):\n",
+    "        result *= i\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example usage:\n",
+    "number_input = int(input(\"Enter a positive integer: \"))\n",
+    "result = factorial(number_input)\n",
+    "print(f\"The factorial of {number_input} is {result}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Call your function is_empty, it takes a parameter and it checks if it is empty or not\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value is empty.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_empty(value):\n",
+    "    # Check if the value is empty\n",
+    "    if not value:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Example usage:\n",
+    "input_value = input(\"Enter a value: \")\n",
+    "result = is_empty(input_value)\n",
+    "\n",
+    "if result:\n",
+    "    print(\"The value is empty.\")\n",
+    "else:\n",
+    "    print(\"The value is not empty.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Write different functions which take lists. They should calculate_mean, calculate_median, calculate_mode, calculate_range, calculate_variance, calculate_std (standard deviation).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 4.3\n",
+      "Median: 4.5\n",
+      "Mode: [2, 5]\n",
+      "Range: 7\n",
+      "Variance: 4.8100000000000005\n",
+      "Standard Deviation: 2.193171219946131\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_mean(data):\n",
+    "  \n",
+    "  # Calculate the mean of the given list.\n",
+    "    return sum(data) / len(data)\n",
+    "\n",
+    "def calculate_median(data):\n",
+    "    \n",
+    "    #Calculate the median of the given list.\n",
+    "    sorted_data = sorted(data)\n",
+    "    n = len(sorted_data)\n",
+    "    if n % 2 == 0:\n",
+    "        return (sorted_data[n//2 - 1] + sorted_data[n//2]) / 2\n",
+    "    else:\n",
+    "        return sorted_data[n//2]\n",
+    "\n",
+    "\n",
+    "def calculate_range(data):\n",
+    "    \n",
+    "    #Calculate the range of the given list.\n",
+    "    return max(data) - min(data)\n",
+    "\n",
+    "def calculate_variance(data):\n",
+    "    # Calculate the mean of the given list.\n",
+    "    mean = calculate_mean(data)\n",
+    "    variance = sum((x - mean) ** 2 for x in data) / len(data)\n",
+    "    return variance\n",
+    "\n",
+    "def calculate_std(data):\n",
+    "    #Calculate the standard deviation of the given list.\n",
+    "    import math\n",
+    "    return math.sqrt(calculate_variance(data))\n",
+    "\n",
+    "# Example usage:\n",
+    "data = [1, 2, 2, 3, 4, 5, 5, 6, 7, 8]\n",
+    "\n",
+    "print(\"Mean:\", calculate_mean(data))\n",
+    "print(\"Median:\", calculate_median(data))\n",
+    "print(\"Mode:\", calculate_mode(data))\n",
+    "print(\"Range:\", calculate_range(data))\n",
+    "print(\"Variance:\", calculate_variance(data))\n",
+    "print(\"Standard Deviation:\", calculate_std(data))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
