--- a/day_11/day11_assignment.ipynb
+++ b/day_11/day11_assignment.ipynb
@@ -714,14 +714,131 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Exercises: Level 3\n",
+    "\n",
+    "1. Write a function called is_prime, which checks if a number is prime.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(number):\n",
+    "    #Check if a given number is prime.\n",
+    "\n",
+    "    if number < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(number**0.5) + 1):\n",
+    "        if number % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Example usage:\n",
+    "print(is_prime(5))  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Write a functions which checks if all items are unique in the list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def are_all_unique(my_list):\n",
+    "    \n",
+    "    return len(my_list) == len(set(my_list))\n",
+    "\n",
+    "# Example usage:\n",
+    "print(are_all_unique([4, 2, 3, 'one', 'two']))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Write a function which checks if all the items of the list are of the same data type.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def are_all_same_type(my_list):\n",
+    "    \n",
+    "    return len(set(type(item) for item in my_list)) == 1\n",
+    "\n",
+    "# Example usage:\n",
+    "print(are_all_same_type([1, 2, 3, 4, 'egg']))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Write a function which check if provided variable is a valid python variable\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid_variable(variable_name):\n",
+    "    \n",
+    "    # Check if the variable name is not a reserved word\n",
+    "    import keyword\n",
+    "    if keyword.iskeyword(variable_name):\n",
+    "        return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "# Example usage:\n",
+    "print(is_valid_variable(\"valid_variable\"))     "
+   ]
   }
  ],
  "metadata": {
