--- a/day_14/day14_assignment.ipynb
+++ b/day_14/day14_assignment.ipynb
@@ -186,14 +186,257 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. Use map to create a new list by changing each number to its square in the numbers list\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of numbers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Use map to create a new list by changing each number to its square\n",
+    "squared_numbers = list(map(lambda x: x**2, numbers))\n",
+    "\n",
+    "# Print the result\n",
+    "print(squared_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Use map to change each name to uppercase in the names list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ASABENEH', 'LIDIYA', 'ERMIAS', 'ABRAHAM']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Asabeneh', 'Lidiya', 'Ermias', 'Abraham']\n",
+    "\n",
+    "# Use map to create a new list by changing each name to uppercase\n",
+    "uppercase_names = list(map(lambda i: i.upper(), names))\n",
+    "\n",
+    "# print the result\n",
+    "print(uppercase_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Use filter to filter out countries containing 'land'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list of countries ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+      "Filtered list of countries ['Estonia', 'Sweden', 'Denmark', 'Norway']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of countries\n",
+    "countries = ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+    "\n",
+    "# Use filter to create a new list by filtering out countries containing 'land'\n",
+    "filtered_countries = list(filter(lambda country: 'land' not in country.lower(), countries))\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Original list of countries\", countries)\n",
+    "print(\"Filtered list of countries\", filtered_countries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Use filter to filter out countries having exactly six characters.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list of countries: ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+      "Filtered list of countries: ['Estonia', 'Finland', 'Denmark', 'Iceland']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of countries\n",
+    "countries = ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+    "\n",
+    "# Use filter to create a new list by filtering out countries containing 'six char'\n",
+    "filtered_len_countries = list(filter(lambda country: len(country) != 6, countries))\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Original list of countries:\", countries)\n",
+    "print(\"Filtered list of countries:\", filtered_len_countries)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Use filter to filter out countries containing six letters and more in the country list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list of countries: ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+      "Filtered list of countries: ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of countries\n",
+    "countries = ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+    "\n",
+    "# Use filter to create a new list by filtering out countries containing 'six char' or more\n",
+    "filtered_six_countries = list(filter(lambda country: len(country) >= 6, countries))\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Original list of countries:\", countries)\n",
+    "print(\"Filtered list of countries:\", filtered_six_countries)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Use filter to filter out countries starting with an 'E'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list of countries: ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+      "Filtered list of countries: ['Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of countries\n",
+    "countries = ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+    "\n",
+    "# Use filter to create a new list by filtering out countries starting with 'E'\n",
+    "filtered_E_countries = list(filter(lambda country: country[0] != 'E', countries))\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Original list of countries:\", countries)\n",
+    "print(\"Filtered list of countries:\", filtered_E_countries)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Chain two or more list iterators (eg. arr.map(callback).filter(callback).reduce(callback))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Chain two list iterators\n",
+    "result = list(filter(lambda x: x % 2 == 0, map(lambda x: x**2, numbers)))\n",
+    "\n",
+    "# Print the result, its a list of squared numbers that are even:\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Declare a function called get_string_lists which takes a list as a parameter and then returns a list containing only string items.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_string_lists(input_list):\n",
+    "   # isinstance checks if each element x in the list is a string.\n",
+    "    return list(filter(lambda x: isinstance(x, str), input_list))\n",
+    "\n",
+    "# Example usage:\n",
+    "mixed_list = [True, 'apple', 2, 'banana', 'cherry', 3]\n",
+    "string_list = get_string_lists(mixed_list)\n",
+    "print(string_list)\n"
+   ]
   }
  ],
  "metadata": {
