--- a/day_14/day14_assignment.ipynb
+++ b/day_14/day14_assignment.ipynb
@@ -437,6 +437,384 @@
     "string_list = get_string_lists(mixed_list)\n",
     "print(string_list)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Use reduce to sum all the numbers in the numbers list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of numbers: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "# List of numbers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7,8,9,10]\n",
+    "\n",
+    "# Use reduce to sum all the numbers\n",
+    "sum_of_numbers = reduce(lambda x, y: x + y, numbers)\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Sum of numbers:\", sum_of_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11. Use reduce to concatenate all the countries and to produce this sentence: Estonia, Finland, Sweden, Denmark, Norway, and Iceland are north European countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estonia Finland Sweden Denmark Norway Iceland are north European countries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "# List of countries\n",
+    "countries = ['Estonia', 'Finland', 'Sweden', 'Denmark', 'Norway', 'Iceland']\n",
+    "\n",
+    "# Use reduce to concatenate all the countries\n",
+    "conc_countries = reduce(lambda x, y: x + ' ' + y, countries)\n",
+    "\n",
+    "# Print the result\n",
+    "print(conc_countries, \"are north European countries.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12. Declare a function called categorize_countries that returns a list of countries with some common pattern (you can find the countries list in this repository as countries.js(eg 'land', 'ia', 'island', 'stan'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countries with 'land': ['Finland', 'Iceland', 'Ireland', 'Marshall Islands', 'Netherlands', 'New Zealand', 'Poland', 'Solomon Islands', 'Swaziland', 'Switzerland', 'Thailand']\n",
+      "Countries with 'ia': ['Albania', 'Algeria', 'Armenia', 'Australia', 'Austria', 'Bolivia', 'Bosnia and Herzegovina', 'Bulgaria', 'Cambodia', 'Croatia', 'Equatorial Guinea', 'Estonia', 'Ethiopia', 'Gambia, The', 'Georgia', 'India', 'Indonesia', 'Latvia', 'Liberia', 'Lithuania', 'Macedonia', 'Malaysia', 'Mauritania', 'Micronesia', 'Mongolia', 'Namibia', 'Nigeria', 'Romania', 'Russia', 'Saint Lucia', 'Saudi Arabia', 'Serbia and Montenegro', 'Slovakia', 'Slovenia', 'Somalia', 'Syria', 'Tanzania', 'Tunisia', 'Zambia']\n",
+      "Countries with 'stan': ['Afghanistan', 'Kazakhstan', 'Kyrgyzstan', 'Pakistan', 'Tajikistan', 'Turkmenistan', 'Uzbekistan']\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = [\n",
+    "  'Afghanistan',\n",
+    "  'Albania',\n",
+    "  'Algeria',\n",
+    "  'Andorra',\n",
+    "  'Angola',\n",
+    "  'Antigua and Barbuda',\n",
+    "  'Argentina',\n",
+    "  'Armenia',\n",
+    "  'Australia',\n",
+    "  'Austria',\n",
+    "  'Azerbaijan',\n",
+    "  'Bahamas',\n",
+    "  'Bahrain',\n",
+    "  'Bangladesh',\n",
+    "  'Barbados',\n",
+    "  'Belarus',\n",
+    "  'Belgium',\n",
+    "  'Belize',\n",
+    "  'Benin',\n",
+    "  'Bhutan',\n",
+    "  'Bolivia',\n",
+    "  'Bosnia and Herzegovina',\n",
+    "  'Botswana',\n",
+    "  'Brazil',\n",
+    "  'Brunei',\n",
+    "  'Bulgaria',\n",
+    "  'Burkina Faso',\n",
+    "  'Burundi',\n",
+    "  'Cambodia',\n",
+    "  'Cameroon',\n",
+    "  'Canada',\n",
+    "  'Cape Verde',\n",
+    "  'Central African Republic',\n",
+    "  'Chad',\n",
+    "  'Chile',\n",
+    "  'China',\n",
+    "  'Colombi',\n",
+    "  'Comoros',\n",
+    "  'Congo (Brazzaville)',\n",
+    "  'Congo',\n",
+    "  'Costa Rica',\n",
+    "  \"Cote d'Ivoire\",\n",
+    "  'Croatia',\n",
+    "  'Cuba',\n",
+    "  'Cyprus',\n",
+    "  'Czech Republic',\n",
+    "  'Denmark',\n",
+    "  'Djibouti',\n",
+    "  'Dominica',\n",
+    "  'Dominican Republic',\n",
+    "  'East Timor (Timor Timur)',\n",
+    "  'Ecuador',\n",
+    "  'Egypt',\n",
+    "  'El Salvador',\n",
+    "  'Equatorial Guinea',\n",
+    "  'Eritrea',\n",
+    "  'Estonia',\n",
+    "  'Ethiopia',\n",
+    "  'Fiji',\n",
+    "  'Finland',\n",
+    "  'France',\n",
+    "  'Gabon',\n",
+    "  'Gambia, The',\n",
+    "  'Georgia',\n",
+    "  'Germany',\n",
+    "  'Ghana',\n",
+    "  'Greece',\n",
+    "  'Grenada',\n",
+    "  'Guatemala',\n",
+    "  'Guinea',\n",
+    "  'Guinea-Bissau',\n",
+    "  'Guyana',\n",
+    "  'Haiti',\n",
+    "  'Honduras',\n",
+    "  'Hungary',\n",
+    "  'Iceland',\n",
+    "  'India',\n",
+    "  'Indonesia',\n",
+    "  'Iran',\n",
+    "  'Iraq',\n",
+    "  'Ireland',\n",
+    "  'Israel',\n",
+    "  'Italy',\n",
+    "  'Jamaica',\n",
+    "  'Japan',\n",
+    "  'Jordan',\n",
+    "  'Kazakhstan',\n",
+    "  'Kenya',\n",
+    "  'Kiribati',\n",
+    "  'Korea, North',\n",
+    "  'Korea, South',\n",
+    "  'Kuwait',\n",
+    "  'Kyrgyzstan',\n",
+    "  'Laos',\n",
+    "  'Latvia',\n",
+    "  'Lebanon',\n",
+    "  'Lesotho',\n",
+    "  'Liberia',\n",
+    "  'Libya',\n",
+    "  'Liechtenstein',\n",
+    "  'Lithuania',\n",
+    "  'Luxembourg',\n",
+    "  'Macedonia',\n",
+    "  'Madagascar',\n",
+    "  'Malawi',\n",
+    "  'Malaysia',\n",
+    "  'Maldives',\n",
+    "  'Mali',\n",
+    "  'Malta',\n",
+    "  'Marshall Islands',\n",
+    "  'Mauritania',\n",
+    "  'Mauritius',\n",
+    "  'Mexico',\n",
+    "  'Micronesia',\n",
+    "  'Moldova',\n",
+    "  'Monaco',\n",
+    "  'Mongolia',\n",
+    "  'Morocco',\n",
+    "  'Mozambique',\n",
+    "  'Myanmar',\n",
+    "  'Namibia',\n",
+    "  'Nauru',\n",
+    "  'Nepal',\n",
+    "  'Netherlands',\n",
+    "  'New Zealand',\n",
+    "  'Nicaragua',\n",
+    "  'Niger',\n",
+    "  'Nigeria',\n",
+    "  'Norway',\n",
+    "  'Oman',\n",
+    "  'Pakistan',\n",
+    "  'Palau',\n",
+    "  'Panama',\n",
+    "  'Papua New Guinea',\n",
+    "  'Paraguay',\n",
+    "  'Peru',\n",
+    "  'Philippines',\n",
+    "  'Poland',\n",
+    "  'Portugal',\n",
+    "  'Qatar',\n",
+    "  'Romania',\n",
+    "  'Russia',\n",
+    "  'Rwanda',\n",
+    "  'Saint Kitts and Nevis',\n",
+    "  'Saint Lucia',\n",
+    "  'Saint Vincent',\n",
+    "  'Samoa',\n",
+    "  'San Marino',\n",
+    "  'Sao Tome and Principe',\n",
+    "  'Saudi Arabia',\n",
+    "  'Senegal',\n",
+    "  'Serbia and Montenegro',\n",
+    "  'Seychelles',\n",
+    "  'Sierra Leone',\n",
+    "  'Singapore',\n",
+    "  'Slovakia',\n",
+    "  'Slovenia',\n",
+    "  'Solomon Islands',\n",
+    "  'Somalia',\n",
+    "  'South Africa',\n",
+    "  'Spain',\n",
+    "  'Sri Lanka',\n",
+    "  'Sudan',\n",
+    "  'Suriname',\n",
+    "  'Swaziland',\n",
+    "  'Sweden',\n",
+    "  'Switzerland',\n",
+    "  'Syria',\n",
+    "  'Taiwan',\n",
+    "  'Tajikistan',\n",
+    "  'Tanzania',\n",
+    "  'Thailand',\n",
+    "  'Togo',\n",
+    "  'Tonga',\n",
+    "  'Trinidad and Tobago',\n",
+    "  'Tunisia',\n",
+    "  'Turkey',\n",
+    "  'Turkmenistan',\n",
+    "  'Tuvalu',\n",
+    "  'Uganda',\n",
+    "  'Ukraine',\n",
+    "  'United Arab Emirates',\n",
+    "  'United Kingdom',\n",
+    "  'United States',\n",
+    "  'Uruguay',\n",
+    "  'Uzbekistan',\n",
+    "  'Vanuatu',\n",
+    "  'Vatican City',\n",
+    "  'Venezuela',\n",
+    "  'Vietnam',\n",
+    "  'Yemen',\n",
+    "  'Zambia',\n",
+    "  'Zimbabwe',\n",
+    "];\n",
+    "\n",
+    "def categorize_countries(pattern):\n",
+    "    \n",
+    "    return list(filter(lambda country: pattern in country, countries))\n",
+    "\n",
+    "# Example usage:\n",
+    "countries_with_land = categorize_countries('land')\n",
+    "countries_with_ia = categorize_countries('ia')\n",
+    "countries_with_stan = categorize_countries('stan')\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Countries with 'land':\", countries_with_land)\n",
+    "print(\"Countries with 'ia':\", countries_with_ia)\n",
+    "print(\"Countries with 'stan':\", countries_with_stan)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function returning a dictionary, where keys stand for starting letters of countries and values are the number of country names starting with that letter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting letter counts: {'A': 11, 'B': 17, 'C': 18, 'D': 4, 'E': 8, 'F': 3, 'G': 11, 'H': 3, 'I': 8, 'J': 3, 'K': 7, 'L': 9, 'M': 18, 'N': 9, 'O': 1, 'P': 9, 'Q': 1, 'R': 3, 'S': 25, 'T': 11, 'U': 7, 'V': 4, 'Y': 1, 'Z': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def starting_letter_count(countries):\n",
+    "    \n",
+    "    letter_count = {}\n",
+    "    for country in countries:\n",
+    "        first_letter = country[0].upper()\n",
+    "        if first_letter in letter_count:\n",
+    "            letter_count[first_letter] += 1\n",
+    "        else:\n",
+    "            letter_count[first_letter] = 1\n",
+    "    return letter_count\n",
+    "\n",
+    "letter_counts = starting_letter_count(countries)\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Starting letter counts:\", letter_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14. Declare a get_first_ten_countries function - it returns a list of first ten countries from the countries.js list in the data folder.\n",
+    "    \n",
+    "15. Declare a get_last_ten_countries function that returns the last ten countries in the countries list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First ten countries: ['Afghanistan', 'Albania', 'Algeria', 'Andorra', 'Angola', 'Antigua and Barbuda', 'Argentina', 'Armenia', 'Australia', 'Austria']\n",
+      "Last ten countries: ['United States', 'Uruguay', 'Uzbekistan', 'Vanuatu', 'Vatican City', 'Venezuela', 'Vietnam', 'Yemen', 'Zambia', 'Zimbabwe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_first_ten_countries(country_list):\n",
+    "    \n",
+    "    return country_list[:10]\n",
+    "\n",
+    "def get_last_ten_countries(country_list):\n",
+    "    \n",
+    "    return country_list[-10:]\n",
+    "\n",
+    "first_ten = get_first_ten_countries(countries)\n",
+    "last_ten = get_last_ten_countries(countries)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"First ten countries:\", first_ten)\n",
+    "print(\"Last ten countries:\", last_ten)"
+   ]
   }
  ],
  "metadata": {
