--- a/day_22/day22_assignment.ipynb
+++ b/day_22/day22_assignment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbs4\u001b[39;00m \u001b[39mimport\u001b[39;00m BeautifulSoup\n\u001b[1;32m      3\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhttps://archive.ics.uci.edu/ml/datasets.php\u001b[39m\u001b[39m'\u001b[39m\n",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbs4\u001b[39;00m \u001b[39mimport\u001b[39;00m BeautifulSoup\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
      ]
     }
@@ -30,14 +30,37 @@
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "url = 'https://archive.ics.uci.edu/ml/datasets.php'\n",
+    "import json\n",
     "\n",
-    "# Lets use the requests get method to fetch the data from url\n",
+    "# URL of the website to scrape\n",
+    "url = 'http://www.bu.edu/president/boston-university-facts-stats/'\n",
     "\n",
+    "# Fetch HTML content from the website\n",
     "response = requests.get(url)\n",
-    "# lets check the status\n",
-    "status = response.status_code\n",
-    "print(status) # 200 means the fetching was successful\n"
+    "\n",
+    "if response.status_code == 200:\n",
+    "    # Parse HTML content using BeautifulSoup\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "    # Find the relevant data on the page and extract it\n",
+    "    # (You need to inspect the HTML structure to identify the elements you want to scrape)\n",
+    "    data_to_scrape = {}  # Create a dictionary to store the scraped data\n",
+    "\n",
+    "    # Example: Scraping all paragraphs under the div with id 'content'\n",
+    "    content_div = soup.find('div', id='content')\n",
+    "    paragraphs = content_div.find_all('p')\n",
+    "\n",
+    "    # Store the scraped data in the dictionary\n",
+    "    data_to_scrape['paragraphs'] = [paragraph.text.strip() for paragraph in paragraphs]\n",
+    "\n",
+    "    # Save the data as a JSON file\n",
+    "    with open('scraped_data.json', 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(data_to_scrape, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "    print(\"Scraping and saving data successful.\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Failed to fetch content from the URL. Status code: {response.status_code}\")\n"
    ]
   }
  ],
